chieu 11/10 api review
